modifiche varie